Use brand menu config

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -59,7 +59,7 @@
   text-align: center;
   color: #ccc;
   margin-top: 10px;
-  background: url(/assets/img/logo.png) no-repeat center center;
+  background: no-repeat center center;
   background-size: 70%;
   text-indent: -9999px;
 }
