Change legend block limits color, closes https://github.com/onaio/gisida/issues/23

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -164,7 +164,7 @@
   border-radius: 3px;
   background-color: transparent;
   background-color: transparent;
-  color: #fff;
+  color: #000;
   content: attr(data-tooltip);
   text-align: center;
   font-size: 12px;
