Toggle framework and map view

--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -28,7 +28,7 @@
                 li {
                     margin-left: -15%;
                     div {
-                        .rectangle {
+                        #rectangle {
                             width: 10%;
                             height: 10%;
                         }
