--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -4,5 +4,7 @@
         max-width: 100%;
         margin-bottom: 5px;
         font-weight: normal;
+        margin-right: 5px;
+        font-size: 12px; 
     }
 }
