--- a/src/components/Controls/StyleSelector/StyleSelector.scss
+++ b/src/components/Controls/StyleSelector/StyleSelector.scss
@@ -2,102 +2,124 @@
 
 /* control positioning */
 .leaflet-control {
-	position: relative;
-	z-index: 7;
-	pointer-events: auto;
-	}
+  position: relative;
+  z-index: 7;
+  pointer-events: auto;
+}
+
 .leaflet-top,
 .leaflet-bottom {
-	position: absolute;
-	z-index: 1000;
-	pointer-events: none;
-	}
+  position: absolute;
+  z-index: 1000;
+  pointer-events: none;
+}
+
 .leaflet-top {
-	top: 0;
-	}
+  top: 0;
+}
+
 .leaflet-right {
-	right: 0;
-	}
+  right: 0;
+}
+
 .leaflet-bottom {
-	bottom: 0;
-	}
+  bottom: 0;
+}
+
 .leaflet-left {
-	left: 0;
-	}
+  left: 0;
+}
+
 .leaflet-control {
-	float: left;
-	clear: both;
-	}
+  float: left;
+  clear: both;
+}
+
 .leaflet-right .leaflet-control {
-	float: right;
-	}
+  float: right;
+}
+
 .leaflet-top .leaflet-control {
-	margin-top: 10px;
-	}
+  margin-top: 10px;
+}
+
 .leaflet-bottom .leaflet-control {
-	margin-bottom: 10px;
-	}
+  margin-bottom: 10px;
+}
+
 .leaflet-left .leaflet-control {
-	margin-left: 10px;
-	}
+  margin-left: 10px;
+}
+
 .leaflet-right .leaflet-control {
-	margin-right: 10px;
-	}
+  margin-right: 10px;
+}
 
 /* layers control */
 .leaflet-control-layers-toggle {
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	display: block;
-	}
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  display: block;
+}
+
 .leaflet-control-layers {
-	box-shadow: 0 1px 5px rgba(0,0,0,0.4);
-	background: #fff;
-	border-radius: 5px;
-	}
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+  background: #fff;
+  border-radius: 5px;
+}
+
 .leaflet-control-layers-toggle {
-	background-image: url(/assets/img/layers.png);
-	width: 32px;
-	height: 32px;
-	}
+  background-image: url(/assets/img/layers.png);
+  width: 32px;
+  height: 32px;
+}
+
 .leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url(/assets/img/layers-2x.png);
-	background-size: 26px 26px;
-	}
+  background-image: url(/assets/img/layers-2x.png);
+  background-size: 26px 26px;
+}
+
 .leaflet-touch .leaflet-control-layers-toggle {
-	width: 44px;
-	height: 44px;
-	}
+  width: 44px;
+  height: 44px;
+}
+
 .leaflet-control-layers .leaflet-control-layers-list,
 .leaflet-control-layers:hover .leaflet-control-layers-toggle {
-	display: none;
-	}
+  display: none;
+}
+
 .leaflet-control-layers:hover .leaflet-control-layers-list {
-	display: block;
-	position: relative;
-	}
-.leaflet-control-layers:hover{
-	padding: 6px 10px 6px 6px;
-	color: #333;
-	background: #fff;
-	}
+  display: block;
+  position: relative;
+}
+
+.leaflet-control-layers:hover {
+  padding: 6px 10px 6px 6px;
+  color: #333;
+  background: #fff;
+}
+
 .leaflet-control-layers-selector {
-	margin-top: 2px;
-	position: relative;
-	top: 1px;
-	}
+  margin-top: 2px;
+  position: relative;
+  top: 1px;
+}
+
 .leaflet-control-layers label {
-	display: block;
-	}
+  display: block;
+}
+
 .leaflet-control-layers-separator {
-	height: 0;
-	border-top: 1px solid #ddd;
-	margin: 5px -10px 5px -6px;
-	}
+  height: 0;
+  border-top: 1px solid #ddd;
+  margin: 5px -10px 5px -6px;
+}
 
 .layer-selector {
-  margin-top: 100px; 
+  margin-top: 100px;
 }
-.leaflet-control-layers-base label input{
+
+.leaflet-control-layers-base label input {
   margin-right: 5px;
 }
