--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -5,6 +5,10 @@
         margin-bottom: 5px;
         font-weight: normal;
         margin-right: 5px;
-        font-size: 12px; 
+        font-size: 12px;
+
+        input[type="radio"] {
+            margin-right: 5px;
+        }
     }
 }
