--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -1,159 +1,123 @@
 .framework-wrapper {
-  .filter-selection {
-    position: fixed;
-    top: 3.5em;
-    left: 20%;
-    width: 30%;
-    padding: 5px;
-    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-    display: table;
-
-    div {
-      display: table-cell;
-    }
-
-    .selections {
-      color: #cb181d;
-      display: table-cell;
-      font-size: 12px;
-    }
-  }
-
-  .key {
-    right: 1px;
-    position: fixed;
-
-    ul {
-      #key1 {
-        width: 10px;
-        height: 10px;
-        background: white;
-        border: 0.5px black;
-        display: inline;
-      }
-
-      #key2 {
-        width: 10px;
-        height: 10px;
-        background: transparent;
-        border: 0.5px dotted black;
-        display: inline;
-      }
-
-      #key3 {
-        width: 10px;
-        height: 10px;
-        background: red;
-        display: inline;
-      }
-
-      #key4 {
-        width: 10px;
-        height: 10px;
-        background: orange;
-        display: inline;
-      }
-
-      #key5 {
-        width: 10px;
-        height: 10px;
-        background: green;
-        display: inline;
-      }
-    }
-  }
-
-  .framework-sectors {
-    position: fixed;
-    top: 14%;
-    width: 100%;
-    margin-left: 2%;
-    left: 16%;
-    z-index: 1000;
-    color: #555;
-    font-size: 12px;
-    line-height: 1.2;
-    overflow-y: scroll;
-
-    .framework-sector {
-      width: 25%;
-      margin-left: 2%;
-      float: left;
-      padding: 15px;
-      border: 1px #eee solid;
-      box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-
-      .sector-header {
-        height: 45px;
-        border-bottom: 1px solid #eee;
-
-        .header {
-          float: left;
-          font-size: 22px;
-          font-weight: bold;
+    position: relative;
+    height: 100vh;
+    .filter-selection {
+        position: fixed;
+        top: 3.5em;
+        left: 20%;
+        width: 30%;
+        padding: 5px;
+        box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+        display: table;
+        div {
+            display: table-cell;
         }
-
-        .icon {
-          float: right;
-          width: 30px;
-          text-align: center;
-          color: #ccc;
-          background: no-repeat center center;
-          background-size: 70%;
+        .selections {
+            color: #cb181d;
+            display: table-cell;
+            font-size: 12px;
         }
-      }
-
-      ul {
-        list-style: none;
-        margin-left: 4%;
-
-        li {
-          margin-left: -15%;
-          padding-top: 1.3%;
-
-          .sub-sector {
-            font-weight: bold;
-            padding-top: 3%;
-          }
-
-          div {
-            display: table;
-
-            .status {
-              display: table-cell;
-              border: 1px solid black;
-              width: 25px;
-              height: 25px;
-
-              .status-1 {
-                width: 50%;
-                height: 100%;
-              }
-
-              .status-2 {
-                width: 50%;
-                height: 100%;
-              }
-            }
-
-            .rectangle {
-              width: 10%;
-              height: 10%;
-            }
-
-            .status-link {
-              display: table-cell;
-              vertical-align: middle;
-              padding-left: 10px;
-            }
-
-            a {
-              color: #555;
-              text-decoration: none;
-            }
-          }
-        }
-      }
     }
-  }
+    .key {
+        top: 10%;
+        right: 15px;
+        position: fixed;
+        ul {
+            #key-label {
+                width: 30px;
+                font-size: 14px;
+            }
+            li {
+                width: 15px;
+                height: 15px;
+                float: left;
+            }
+        }
+    }
+    .framework-sectors {
+        position: fixed;
+        top: 14%;
+        width: 100%;
+        margin-left: 2%;
+        left: 16%;
+        z-index: 1000;
+        color: #555;
+        font-size: 12px;
+        line-height: 1.2;
+        overflow-y: scroll;
+        .framework-sector {
+            width: 25%;
+            margin-left: 2%;
+            float: left;
+            padding: 15px;
+            border: 1px #eee solid;
+            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+            .sector-header {
+                height: 45px;
+                border-bottom: 1px solid #eee;
+                .header {
+                    float: left;
+                    font-size: 22px;
+                    font-weight: bold;
+                }
+                .icon {
+                    float: right;
+                    width: 30px;
+                    text-align: center;
+                    color: #ccc;
+                    background: no-repeat center center;
+                    background-size: 70%;
+                }
+            }
+            ul {
+                list-style: none;
+                margin-left: 4%;
+                li {
+                    margin-left: -15%;
+                    padding-top: 1.3%;
+                    .sub-sector {
+                        font-weight: bold;
+                        padding-top: 3%;
+                    }
+                    div {
+                        display: table;
+                        .status {
+                            display: table-cell;
+                            border: 1px solid black;
+                            width: 25px;
+                            height: 25px;
+                            .status-1 {
+                                width: 50%;
+                                height: 100%;
+                            }
+                            .status-2 {
+                                width: 50%;
+                                height: 100%;
+                            }
+                        }
+                        .rectangle {
+                            width: 10%;
+                            height: 10%;
+                        }
+                        .status-link {
+                            display: table-cell;
+                            vertical-align: middle;
+                            padding-left: 10px;
+                        }
+                        a {
+                            color: #555;
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .powered-by {
+        width: 100px;
+        position: absolute;
+        bottom: 15px;
+        right: 15px;
+        content: url("/assets/img/Ona-powered-2color-horiz.png")
+    }
 }
