--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,156 +1,133 @@
 .menu {
-  width: 80px;
-  background: #e74624;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-
-  ul {
-    padding: 0;
-    list-style-type: none;
-
-    li a {
-      display: block;
-      width: 80px;
-      line-height: 3.5;
-      color: #fff;
-      font-size: 20px;
-      text-align: center;
+    width: 80px;
+    background: #E74624;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0px;
+    z-index: 1000;
+    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
+    ul {
+        padding: 0;
+        list-style-type: none;
+        li a {
+            display: block;
+            width: 80px;
+            line-height: 3.5;
+            color: #fff;
+            font-size: 20px;
+            text-align: center;
+        }
     }
-  }
-}
-
-.menu-horizontal {
-  width: 80px;
-  background: #e74624;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-
-  ul {
-    padding: 0;
-    list-style-type: none;
-
-    li a {
-      display: block;
-      width: 80px;
-      line-height: 3.5;
-      color: #fff;
-      font-size: 20px;
-      text-align: center;
-    }
-  }
 }
 
 .sign-out {
-  position: absolute;
-  bottom: 30px;
-  left: 0;
-  font-size: 18px;
-  width: 80px;
-  padding: 15px 0;
-  display: block;
-  color: #fff;
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    font-size: 18px;
+    width: 80px;
+    padding: 15px 0;
+    display: block;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
 }
 
 .sign-out:hover,
 .sign-out:focus {
-  color: #999;
+    color: #999;
 }
 
 .brand-title {
-  color: #fff;
-  font-size: 14px;
-  position: absolute;
-  bottom: 100px;
-  left: 28px;
-  display: block;
-  writing-mode: vertical-rl;
-  -webkit-writing-mode: vertical-rl;
+    color: #fff;
+    font-size: 14px;
+    position: absolute;
+    bottom: 100px;
+    left: 28px;
+    display: block;
+    writing-mode: vertical-rl;
+    -webkit-writing-mode: vertical-rl;
 }
 
 .brand-icon {
-  display: block;
-  width: 80px;
-  height: 70px;
-  text-align: center;
-  color: #ccc;
-  margin-top: 10px;
-  background: no-repeat center center;
-  background-size: 70%;
-  text-indent: -9999px;
+    display: block;
+    width: 80px;
+    height: 70px;
+    text-align: center;
+    color: #ccc;
+    margin-top: 10px;
+    background: no-repeat center center;
+    background-size: 70%;
+    text-indent: -9999px;
 }
 
 .white {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .framework-menu {
-  width: 100%;
-  height: 3em;
-  background: #a50f15;
-  position: fixed;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 3em;
+    background: #a50f15;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
 }
 
 .framework-brand-title {
-  color: #fff;
-  position: absolute;
-  display: block;
-  top: 30%;
-  font-size: 16px;
-  left: 4%;
+    color: #fff;
+    font-size: 14px;
+    position: absolute;
+    display: block;
+    top: 30%;
+    font-size: 16px;
+    left: 4%;
 }
 
 .framework-brand-icon {
-  display: block;
-  width: 2.5%;
-  text-align: center;
-  color: #ccc;
-  margin-top: 7px;
-  margin-left: 15px;
-  background: no-repeat center center;
-  background-size: 70%;
+    display: block;
+    width: 2.5%;
+    text-align: center;
+    color: #ccc;
+    margin-top: 7px;
+    margin-left: 15px;
+    background: no-repeat center center;
+    background-size: 70%;
 }
 
 .framework-reports {
-  right: 7%;
-  top: 2%;
-  position: fixed;
-
-  a {
-    color: white;
-    font-size: 10px;
-    text-decoration: none;
-  }
+    right: 7%;
+    top: 2%;
+    position: fixed;
+    #reports-divider {
+        color: white;
+        display: inline;
+    }
+    a {
+        color: white;
+        font-size: 10px;
+        text-decoration: none;
+    }
 }
 
 .framework-sign-out {
-  position: absolute;
-  right: 0;
-  font-size: 18px;
-  width: 80px;
-  padding: 15px 0;
-  display: block;
-  color: #fff;
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
-  top: 0;
+    position: absolute;
+    right: 0;
+    font-size: 18px;
+    width: 80px;
+    padding: 15px 0;
+    display: block;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    top: 0;
 }
 
 .framework-sign-out:hover,
 .framework-sign-out:focus {
-  color: #999;
+    color: #999;
 }
