--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -8,13 +8,12 @@
         width: 30%;
         padding: 5px;
         box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-        display: table;
         div {
-            display: table-cell;
+            display: inline;
         }
         .selections {
             color: #cb181d;
-            display: table-cell;
+            display: inline;
             font-size: 12px;
         }
     }
@@ -23,14 +22,22 @@
         right: 15px;
         position: fixed;
         ul {
-            #key-label {
-                width: 30px;
-                font-size: 14px;
-            }
             li {
-                width: 15px;
-                height: 15px;
                 float: left;
+                #key-label {
+                    width: 30px;
+                    font-size: 14px;
+                }
+                .status-key {
+                    width: 15px;
+                    height: 15px;
+                }
+                .status-description {
+                    display: none;
+                }
+            }
+            li:hover {
+                display: table;
             }
         }
     }
