Tweak menu positiions

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -82,18 +82,19 @@
     font-size: 14px;
     position: absolute;
     display: block;
-    top: 30%;
+    top: 27%;
     font-size: 16px;
-    left: 4%;
+    left: 3em;
 }
 
 .framework-brand-icon {
     display: block;
-    width: 2.5%;
+    width: 32px;
+    height: 32px;
     text-align: center;
     color: #ccc;
-    margin-top: 7px;
-    margin-left: 15px;
+    margin-top: 5px;
+    margin-left: 10px;
     background: no-repeat center center;
     background-size: 70%;
 }
