--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -3,18 +3,22 @@
     height: 100vh;
     .filter-selection {
         position: fixed;
-        top: 3.5em;
+        top: 4.5em;
         left: 20%;
         width: 30%;
-        padding: 5px;
+        padding: 8px;
         box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+        font-weight: 600;
+        font-size: 12px;
+        .pre-text {
+            color: dimgray;
+        }
         div {
             display: inline;
         }
         .selections {
             color: #cb181d;
             display: inline;
-            font-size: 12px;
         }
     }
     .key {
@@ -43,7 +47,7 @@
     }
     .framework-sectors {
         position: fixed;
-        top: 14%;
+        top: 8.5em;
         width: 100%;
         margin-left: 2%;
         left: 16%;
