--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -1,163 +1,170 @@
-.framework-wrapper {
-  position: relative;
-  height: 100vh;
-
-  .filter-selection {
-    position: fixed;
-    top: 4.5em;
-    left: 20%;
-    width: 30%;
-    padding: 8px;
-    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-    font-weight: 600;
-    font-size: 12px;
-
-    .pre-text {
-      color: dimgray;
-    }
-
-    div {
-      display: inline;
-    }
-
-    .selections {
-      color: #cb181d;
-      display: inline;
-    }
-  }
-
-  .key {
-    top: 10%;
-    right: 15px;
-    position: fixed;
-
-    ul {
-      li {
-        float: left;
-
-        #key-label {
-          width: 30px;
-          font-size: 14px;
-        }
-
-        .status-key {
-          width: 15px;
-          height: 15px;
-        }
-
-        .status-description {
-          display: none;
-        }
-      }
-
-      li:hover {
-        display: table;
-      }
-    }
-  }
-
-  .framework-sectors {
-    position: fixed;
-    top: 8.5em;
-    width: 100%;
-    margin-left: 2%;
-    left: 16%;
-    z-index: 1000;
-    color: #555;
-    font-size: 12px;
-    line-height: 1.2;
-    overflow-y: scroll;
-
-    .framework-sector {
-      width: 25%;
-      margin-left: 2%;
-      float: left;
-      padding: 15px;
-      border: 1px #eee solid;
-      box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-
-      .sector-header {
-        height: 45px;
-        border-bottom: 1px solid #eee;
-
-        .header {
-          float: left;
-          font-size: 22px;
-          font-weight: bold;
-        }
-
-        .icon {
-          float: right;
-          width: 30px;
-          text-align: center;
-          color: #ccc;
-          background: no-repeat center center;
-          background-size: 70%;
-        }
-      }
-
-      ul {
-        list-style: none;
-        margin-left: 4%;
-
-        li {
-          margin-left: -15%;
-          padding-top: 1.3%;
-
-          .sub-sector {
-            font-weight: bold;
-            padding-top: 3%;
-          }
-
-          div {
-            display: table;
-
-            .status {
-              display: table-cell;
-              border: 1px solid black;
-              width: 25px;
-              height: 25px;
-
-              .status-1 {
-                width: 50%;
-                height: 100%;
-              }
-
-              .status-2 {
-                width: 50%;
-                height: 100%;
-              }
+    .framework-wrapper {
+        position: relative;
+        height: 100vh;
+        .filter-selection {
+            position: fixed;
+            top: 4.5em;
+            left: 20%;
+            width: 30%;
+            padding: 8px;
+            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+            font-weight: 600;
+            font-size: 12px;
+            .pre-text {
+                color: dimgray;
             }
-
-            .rectangle {
-              width: 10%;
-              height: 10%;
+            div {
+                display: inline;
             }
-
-            .status-link {
-              display: table-cell;
-              vertical-align: middle;
-              padding-left: 10px;
+            .selections {
+                color: #cb181d;
+                display: inline;
             }
-
-            a {
-              color: #555;
-              text-decoration: none;
-            }
-          }
         }
-      }
+        .key {
+            top: 10%;
+            right: 15px;
+            position: fixed;
+            ul {
+                li {
+                    float: left;
+                    #key-label {
+                        width: 30px;
+                        font-size: 14px;
+                    }
+                    .status-key {
+                        width: 15px;
+                        height: 15px;
+                    }
+                }
+            }
+        }
+        .key-popup {
+            display: none;
+        }
+        .key:hover+.key-popup {
+            display: block;
+        }
+        .key-popup {
+            z-index: 1001;
+            position: fixed;
+            top: 14%;
+            right: 15px;
+            width: 20%;
+            background: #FFF;
+            height: 25%;
+            border: 1px #eee solid;
+            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+            #popup-key-label {
+                font-size: 14px;
+                font-weight: 600;
+                margin: 10px;
+            }
+            div {
+                display: table;
+                padding-left: 10px;
+                padding-bottom: 2px;
+                .popup-status-key {
+                    display: table-cell;
+                    width: 15px;
+                    height: 15px;
+                }
+                .popup-status-description {
+                    display: table-cell;
+                    font-size: 12px;
+                }
+            }
+        }
+        .framework-sectors {
+            position: fixed;
+            top: 8.5em;
+            width: 100%;
+            margin-left: 2%;
+            left: 16%;
+            z-index: 1000;
+            color: #555;
+            font-size: 12px;
+            line-height: 1.2;
+            overflow-y: scroll;
+            .framework-sector {
+                width: 25%;
+                margin-left: 2%;
+                float: left;
+                padding: 15px;
+                border: 1px #eee solid;
+                box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
+                .sector-header {
+                    height: 45px;
+                    border-bottom: 1px solid #eee;
+                    .header {
+                        float: left;
+                        font-size: 22px;
+                        font-weight: bold;
+                    }
+                    .icon {
+                        float: right;
+                        width: 30px;
+                        text-align: center;
+                        color: #ccc;
+                        background: no-repeat center center;
+                        background-size: 70%;
+                    }
+                }
+                ul {
+                    list-style: none;
+                    margin-left: 4%;
+                    li {
+                        margin-left: -15%;
+                        padding-top: 1.3%;
+                        .sub-sector {
+                            font-weight: bold;
+                            padding-top: 3%;
+                        }
+                        div {
+                            .sector-indicator {
+                                display: table;
+                                .status {
+                                    display: table-cell;
+                                    border: 1px solid black;
+                                    width: 25px;
+                                    height: 25px;
+                                    .status-1 {
+                                        width: 50%;
+                                        height: 100%;
+                                    }
+                                    .status-2 {
+                                        width: 50%;
+                                        height: 100%;
+                                    }
+                                }
+                                .rectangle {
+                                    width: 10%;
+                                    height: 10%;
+                                }
+                                .status-link {
+                                    cursor: pointer;
+                                    display: table-cell;
+                                    vertical-align: middle;
+                                    padding-left: 10px;
+                                }
+                                a {
+                                    color: #555;
+                                    text-decoration: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .powered-by {
+            width: 100px;
+            position: absolute;
+            bottom: 15px;
+            right: 15px;
+            content: url("/assets/img/Ona-powered-2color-horiz.png");
+        }
     }
-  }
-
-  .powered-by {
-    width: 100px;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    content: url("/assets/img/Ona-powered-2color-horiz.png");
-  }
-}
 
     .toggle-view-link {
         margin: 5px;
