--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -1,26 +1,6 @@
     .framework-wrapper {
         position: relative;
         height: 100vh;
-        .filter-selection {
-            position: fixed;
-            top: 4.5em;
-            left: 20%;
-            width: 30%;
-            padding: 8px;
-            box-shadow: 0 1px 7px rgba(0, 0, 0, 0.2);
-            font-weight: 600;
-            font-size: 12px;
-            .pre-text {
-                color: dimgray;
-            }
-            div {
-                display: inline;
-            }
-            .selections {
-                color: #cb181d;
-                display: inline;
-            }
-        }
         .key {
             top: 10%;
             right: 15px;
@@ -124,7 +104,7 @@
                             .sector-indicator {
                                 display: table;
                                 .status {
-                                    display: table-cell;
+                                    display: -webkit-inline-box;
                                     border: 1px solid black;
                                     width: 25px;
                                     height: 25px;
