Refactor layer.js

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -189,3 +189,10 @@
 .popup-body {
     max-width: 400px;
 }
+
+.map-status-colors {
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border: 1px solid black;
+}
