--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -69,7 +69,7 @@
 
 .framework-menu {
     width: 100%;
-    height: 3em;
+    height: 6%;
     background: #a50f15;
     position: fixed;
     top: 0;
