--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -69,7 +69,7 @@
 
 .framework-menu {
     width: 100%;
-    height: 6%;
+    height: 3em;
     background: #a50f15;
     position: fixed;
     top: 0;
@@ -101,8 +101,8 @@
 
 .framework-reports {
     right: 7%;
-    top: 2%;
-    position: fixed;
+    top: 22%;
+    position: absolute;
     #reports-divider {
         color: white;
         display: inline;
@@ -122,8 +122,8 @@
     position: absolute;
     right: 0;
     font-size: 18px;
-    width: 80px;
-    padding: 15px 0;
+    width: 6%;
+    padding: 9px 0;
     display: block;
     color: #fff;
     font-weight: bold;
