Change login logo

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -13,6 +13,15 @@
         background-size: 70%;
         text-indent: -9999px;
     }
+    .framework-brand-login {
+        display: block;
+        width: 200px;
+        height: 100px;
+        text-align: center;
+        color: #ccc;
+        background-size: 70%;
+        text-indent: -9999px;
+    }
     .password-label {
         display: inline-block;
         font-weight: bold;
