Add media queries to framework sector
Signed-off-by: Kipchirchir Sigei <arapgodsmack@gmail.com>

--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -208,8 +208,12 @@
         }
     }
 
-    @media screen and (max-width: 748px) {
+    @media screen and (max-width: 1048px) {
         .framework-sector {
-            width: 100% !important;
+            width: 95% !important;
+        }
+
+        .framework-sector ul {
+            margin-left: 8% !important;
         }
     }
