--- a/src/components/Sectors/Sectors.scss
+++ b/src/components/Sectors/Sectors.scss
@@ -80,7 +80,7 @@ ul {
 }
 
 .layers {
-    padding: 20px 0 20px 20px;
+    padding: 20px 0 20px 18px;
     display: none;
     li {
         position: relative;
@@ -93,6 +93,7 @@ ul {
             width: 80%;
             display: block;
             margin: 0 0 10px 20px;
+            text-indent: -23px;
         }
         input[type='checkbox'],
         input[type='radio'] {
