Fix layers label indent
Signed-off-by: Kipchirchir Sigei <arapgodsmack@gmail.com>

--- a/src/components/Sectors/Sectors.scss
+++ b/src/components/Sectors/Sectors.scss
@@ -38,7 +38,7 @@
     overflow-y: auto;
     background: #ffffff;
     box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-    top: 6%;
+    top: 3em;
     left: 0;
     .sectors {
         padding: 0;
