Use high res icon and edit styling

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -16,25 +16,33 @@
   }
 
   .framework-brand-login {
+    width: 640px;
+    height: 174px;
     display: block;
-    width: 200px;
-    height: 100px;
     text-align: center;
     color: #ccc;
-    background-size: 70%;
     text-indent: -9999px;
   }
 
   .password-label {
     display: inline-block;
     font-weight: bold;
-    margin: 10px 0 5px 25px;
     color: #333;
+    width: 100%;
+    text-align: center;
+    margin: 10px auto;
+  }
+
+  .form-control {
+    margin: 0 auto;
+    width: 50%;
   }
 
   .login-form {
-    width: 200px;
-    margin: 10% auto 0;
+    position: fixed;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     .login input {
       background: rgba(0, 0, 0, 0.8);
