--- a/src/components/Sectors/Sectors.scss
+++ b/src/components/Sectors/Sectors.scss
@@ -42,7 +42,7 @@
   overflow-y: auto;
   background: #fff;
   box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
-  top: 6%;
+  top: 3em;
   left: 0;
 
   .sectors {
