Add framework view popup text justification and whitespace pre-wrap

--- a/src/components/Framework/Framework.scss
+++ b/src/components/Framework/Framework.scss
@@ -285,6 +285,11 @@
   }
 }
 
+p {
+  text-align: justify;
+  white-space: pre-wrap;
+}
+
 @media screen and (max-width: 1048px) {
   .framework-sector {
     width: 95% !important;
