--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -199,7 +199,7 @@
 .popup-body {
   max-width: 400px;
   text-align: justify;
-  text-justify: inter-word;
+  white-space: pre-wrap;
 }
 
 .map-status-popup {
